# Uniquenium

./: .gitignore  .gitmodules  .pyproject  CMakeLists.txt  README-ZH_CN.md  README.md  README_ZH.md  TODO.md  deploy-windows.bat  launcher.cpp  launcher.py  main.qml  requirements.txt  resources.qrc  start.bat  updRes.py  updrc.bat  version_exe.rc.in
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
UniDesk/: CMakeLists.txt  UniDeskAcrylic.qml  UniDeskButton.qml  UniDeskCheckBox.qml  UniDeskColorPicker.qml  UniDeskComBase.qml  UniDeskComBox.qml  UniDeskComManager.qml  UniDeskComSelector.qml  UniDeskComWindow.qml  UniDeskComboBox.qml  UniDeskDialog.qml  UniDeskFontBox.qml  UniDeskGroup.qml  UniDeskLink.qml  UniDeskMenu.qml  UniDeskMenuItem.qml  UniDeskMenuSeparator.qml  UniDeskMessageBox.qml  UniDeskOptionsText.qml  UniDeskPathSelector.qml  UniDeskPosSelector.qml  UniDeskRadioButton.qml  UniDeskSettingsWindow.qml  UniDeskSpinBox.qml  UniDeskTabBar.qml  UniDeskTabButton.qml  UniDeskText.qml  UniDeskTextArea.qml  UniDeskTextButton.qml  UniDeskTextField.qml  UniDeskTooltip.qml  UniDeskWindow.qml  __init__.py  qmldir
UniDesk/Components/: CMakeLists.txt  UDCText.qml  UDCTextOptions.qml  basic-com-list.json  components-list  extra-com-list.json  qmldir
UniDesk/Components/UDCFrame/: UDCFrame.qml  UDCFrameOptions.qml  qmldir
UniDesk/Components/UDCImage/: UDCImage.qml  UDCImageOptions.qml  qmldir
UniDesk/Components/UDCText/: CMakeLists.txt  UDCText.qml  UDCTextLaunch.qml  UDCTextOptions.qml  UDCTextTools.cpp  UDCTextTools.h  UDCTextTools.py  UDCTextUtils.cpp  UDCTextUtils.h  pyplugins-list  qmldir
UniDesk/Controls/: UniDeskAcrylic.qml  UniDeskAppBar.qml  UniDeskButton.qml  UniDeskChart.qml  UniDeskCheckBox.qml  UniDeskColorPicker.qml  UniDeskComBase.qml  UniDeskComBox.qml  UniDeskComManager.qml  UniDeskComRectEditor.qml  UniDeskComboBox.qml  UniDeskDialog.qml  UniDeskFontBox.qml  UniDeskFrame.qml  UniDeskHotkeyPicker.qml  UniDeskIcon.qml  UniDeskImage.qml  UniDeskInfoBar.qml  UniDeskMenu.qml  UniDeskMenuItem.qml  UniDeskMenuSeparator.qml  UniDeskMessageBox.qml  UniDeskObject.qml  UniDeskPathSelector.qml  UniDeskPosSelector.qml  UniDeskRadioButton.qml  UniDeskShadow.qml  UniDeskSizeSelector.qml  UniDeskSlider.qml  UniDeskSpinBox.qml  UniDeskTabBar.qml  UniDeskTabButton.qml  UniDeskText.qml  UniDeskTextArea.qml  UniDeskTextButton.qml  UniDeskTextField.qml  UniDeskTooltip.qml  UniDeskTreeView.qml  UniDeskWindow.qml  qmldir
UniDesk/CppExt/: UniDeskBase.cpp  UniDeskBase.h  UniDeskComponentsData.cpp  UniDeskComponentsData.h  UniDeskCursorManager.cpp  UniDeskCursorManager.h  UniDeskCustomWallpaper.cpp  UniDeskCustomWallpaper.h  UniDeskDefines.h  UniDeskExpr.cpp  UniDeskExpr.h  UniDeskFrameless.cpp  UniDeskFrameless.h  UniDeskGlobals.cpp  UniDeskGlobals.h  UniDeskHotkey.cpp  UniDeskHotkey.h  UniDeskPluginMgr.cpp  UniDeskPluginMgr.h  UniDeskRoot.cpp  UniDeskRoot.h  UniDeskSettings.cpp  UniDeskSettings.h  UniDeskSystemInfo.cpp  UniDeskSystemInfo.h  UniDeskSystemTray.cpp  UniDeskSystemTray.h  UniDeskTextStyle.cpp  UniDeskTextStyle.h  UniDeskTools.cpp  UniDeskTools.h  UniDeskUtils.cpp  UniDeskUtils.h
UniDesk/GraphicalEffects/: .qmlls.ini  BrightnessContrast.qml  CMakeLists.txt  ColorOverlay.qml  Colorize.qml  ConicalGradient.qml  Desaturate.qml  Displace.qml  DropShadow.qml  FastBlur.qml  FastGlow.qml  GammaAdjust.qml  Glow.qml  HueSaturation.qml  LevelAdjust.qml  LinearGradient.qml  OpacityMask.qml  RadialGradient.qml  RectangularGlow.qml  ThresholdMask.qml
UniDesk/PyPlugin/: UniDeskBases.py  UniDeskData.py  UniDeskDefines.py  UniDeskGlobals.py  UniDeskTextStyle.py  UniDeskTools.py
UniDesk/Singletons/: UniDeskComManager.qml  UniDeskComWindow.qml  UniDeskPageWindow.qml  UniDeskSettingsWindow.qml  qmldir
UniDesk/Singletons/SettingsViews/: AboutView.qml  AppearanceView.qml  BehaviorView.qml  HotkeysView.qml  PluginsView.qml  ThemesView.qml
UniDesk/cpp/: calculator.cpp  calculator.h
UniDesk/cppbindings/: pybind.cpp
UniDeskCpp/: __init__.py  example.cpp
UniDeskPlugin/: UniDeskBases.py  UniDeskData.py  UniDeskDefines.py  UniDeskGlobals.py  UniDeskTools.py
components/: qmldir
legacy/: launcher.py
main/: UniDeskBase.py  UniDeskBases.py  UniDeskData.py  UniDeskGlobals.py  UniDeskTextStyle.py  UniDeskTools.py  UniDeskUnits.py  desktop.py  handlers.py  main.qml  updCpp.py  updRcc.py  updRes.py
pyunidesk/: UniDeskBase.py  UniDeskData.py
qml/: UniDeskText.qml
translations/: uniquenium_en_US.ts  uniquenium_zh_CN.ts
unidesk_qml/: UniDeskAcrylic.qml  UniDeskButton.qml  UniDeskCheckBox.qml  UniDeskColorPicker.qml  UniDeskComBase.qml  UniDeskComManager.qml  UniDeskComboBox.qml  UniDeskDialog.qml  UniDeskFontBox.qml  UniDeskFrame.qml  UniDeskIcon.qml  UniDeskLink.qml  UniDeskMenu.qml  UniDeskMenuItem.qml  UniDeskMenuSeparator.qml  UniDeskMessageBox.qml  UniDeskPathSelector.qml  UniDeskRadioButton.qml  UniDeskSettingsWindow.qml  UniDeskSpinBox.qml  UniDeskTabBar.qml  UniDeskTabButton.qml  UniDeskText.qml  UniDeskTextArea.qml  UniDeskTextBox.qml  UniDeskTextButton.qml  UniDeskTextField.qml  UniDeskTooltip.qml  UniDeskWindow.qml  qmldir
